--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<meta http-equiv="Cache-Control" content="no-store" />
+	<meta http-equiv="cache-control" content="no-cache" />
 
-	<title>SMU ASL Flashcards</title>
+	<title>ASL Flashcards</title>
 
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./global.css'>
